--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       --bg1:#070913;
       --bg2:#0b0e1e;
       --fg:#f5f5f7;
-      --muted:rgba(245,245,247,.78);
       --line:rgba(255,255,255,.11);
-      --panel:rgba(255,255,255,.045);
       --field:rgba(0,0,0,.28);
       --shadow:rgba(0,0,0,.74);
       --ring:rgba(210,230,255,.18);
@@ -44,7 +42,7 @@
       position:fixed;inset:-10%;
       pointer-events:none;
       z-index:1;
-      opacity:.95;
+      opacity:.55;
       background:
         radial-gradient(circle at 12% 18%, rgba(255,255,255,.9) 0 1px, transparent 2px),
         radial-gradient(circle at 24% 72%, rgba(255,255,255,.7) 0 1px, transparent 2px),
@@ -61,57 +59,37 @@
         radial-gradient(circle at 76% 12%, rgba(255,255,255,.7) 0 1px, transparent 2px),
         radial-gradient(circle at 6% 62%, rgba(255,255,255,.6) 0 1px, transparent 2px);
       filter:drop-shadow(0 0 10px rgba(255,255,255,.08));
-      animation: drift 36s linear infinite;
+      animation: drift 42s linear infinite;
     }
-
-    .stars2{
-      position:fixed;inset:-15%;
-      pointer-events:none;
-      z-index:1;
-      opacity:.55;
-      background:
-        radial-gradient(circle at 10% 30%, rgba(255,255,255,.7) 0 1px, transparent 2px),
-        radial-gradient(circle at 20% 10%, rgba(255,255,255,.5) 0 1px, transparent 2px),
-        radial-gradient(circle at 30% 55%, rgba(255,255,255,.6) 0 1px, transparent 2px),
-        radial-gradient(circle at 45% 22%, rgba(255,255,255,.55) 0 1px, transparent 2px),
-        radial-gradient(circle at 57% 40%, rgba(255,255,255,.6) 0 1px, transparent 2px),
-        radial-gradient(circle at 68% 18%, rgba(255,255,255,.55) 0 1px, transparent 2px),
-        radial-gradient(circle at 78% 52%, rgba(255,255,255,.5) 0 1px, transparent 2px),
-        radial-gradient(circle at 88% 26%, rgba(255,255,255,.6) 0 1px, transparent 2px),
-        radial-gradient(circle at 16% 84%, rgba(255,255,255,.55) 0 1px, transparent 2px),
-        radial-gradient(circle at 52% 78%, rgba(255,255,255,.5) 0 1px, transparent 2px),
-        radial-gradient(circle at 84% 82%, rgba(255,255,255,.55) 0 1px, transparent 2px);
-      transform:scale(1.15);
-      filter:blur(.2px);
-      animation: drift2 58s linear infinite;
-    }
-
     @keyframes drift{
       0%{transform:translate3d(0,0,0)}
-      100%{transform:translate3d(-4.5%, 3.5%, 0)}
-    }
-    @keyframes drift2{
-      0%{transform:scale(1.15) translate3d(0,0,0)}
-      100%{transform:scale(1.15) translate3d(4.2%, -3.2%, 0)}
+      100%{transform:translate3d(-3.8%, 2.6%, 0)}
     }
 
-    .twinkle{
+    .meteors{
       position:fixed;inset:0;
       pointer-events:none;
       z-index:2;
-      opacity:.38;
-      background:
-        radial-gradient(circle at 22% 34%, rgba(255,255,255,.9) 0 1px, transparent 3px),
-        radial-gradient(circle at 48% 22%, rgba(255,255,255,.85) 0 1px, transparent 3px),
-        radial-gradient(circle at 64% 58%, rgba(255,255,255,.9) 0 1px, transparent 3px),
-        radial-gradient(circle at 82% 18%, rgba(255,255,255,.85) 0 1px, transparent 3px),
-        radial-gradient(circle at 12% 76%, rgba(255,255,255,.85) 0 1px, transparent 3px);
-      filter:blur(.15px) drop-shadow(0 0 8px rgba(255,255,255,.12));
-      animation: tw 3.6s ease-in-out infinite alternate;
+      overflow:hidden;
+      opacity:.95;
     }
-    @keyframes tw{
-      0%{opacity:.18}
-      100%{opacity:.46}
+    .meteor{
+      position:absolute;
+      top:var(--top);
+      left:var(--left);
+      width:var(--len);
+      height:2px;
+      transform:rotate(var(--rot));
+      background:linear-gradient(90deg, rgba(255,255,255,0), rgba(210,235,255,.95), rgba(255,255,255,.85));
+      filter:drop-shadow(0 0 10px rgba(255,255,255,.12));
+      opacity:0;
+      animation: meteorFly var(--dur) linear infinite;
+      animation-delay:var(--delay);
+    }
+    @keyframes meteorFly{
+      0%{transform:translate3d(0,0,0) rotate(var(--rot)); opacity:0}
+      6%{opacity:1}
+      100%{transform:translate3d(var(--dx), var(--dy), 0) rotate(var(--rot)); opacity:0}
     }
 
     .grain{
@@ -122,19 +100,18 @@
       background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='220' height='220'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='220' height='220' filter='url(%23n)' opacity='.55'/%3E%3C/svg%3E");
       mix-blend-mode:overlay;
     }
-
     .vignette{
       position:fixed;inset:0;
       pointer-events:none;
       z-index:2;
-      background:radial-gradient(1100px 680px at 50% 45%, transparent 42%, rgba(0,0,0,.55) 78%, rgba(0,0,0,.78) 100%);
+      background:radial-gradient(1100px 680px at 50% 45%, transparent 42%, rgba(0,0,0,.55) 78%, rgba(0,0,0,.80) 100%);
     }
 
     .box{
       position:relative;
       width:min(980px,92vw);
       padding:24px;
-      border:1px solid var(--line);
+      border:1px solid rgba(255,255,255,.12);
       border-radius:18px;
       background:
         radial-gradient(120% 180% at 10% 0%, rgba(255,255,255,.06), transparent 62%),
@@ -206,7 +183,7 @@
     .pillbtn{
       padding:8px 12px;
       border-radius:999px;
-      border:1px solid var(--line);
+      border:1px solid rgba(255,255,255,.12);
       background:
         radial-gradient(120% 200% at 30% 0%, rgba(255,255,255,.07), transparent 60%),
         radial-gradient(120% 200% at 85% 0%, rgba(255,255,255,.045), transparent 60%),
@@ -245,7 +222,7 @@
 
     input,textarea,button{
       border-radius:14px;
-      border:1px solid var(--line);
+      border:1px solid rgba(255,255,255,.11);
       background:
         radial-gradient(140% 220% at 20% 0%, rgba(255,255,255,.06), transparent 60%),
         radial-gradient(140% 220% at 90% 0%, rgba(255,255,255,.035), transparent 62%),
@@ -327,7 +304,8 @@
     }
 
     @media (prefers-reduced-motion: reduce){
-      .stars,.stars2,.twinkle,.box::after{animation:none}
+      .stars,.meteors,.box::after{animation:none}
+      .meteor{animation:none}
       *{transition:none !important}
     }
   </style>
@@ -335,8 +313,26 @@
 <body>
   <div class="sky"></div>
   <div class="stars" aria-hidden="true"></div>
-  <div class="stars2" aria-hidden="true"></div>
-  <div class="twinkle" aria-hidden="true"></div>
+
+  <div class="meteors" aria-hidden="true">
+    <span class="meteor" style="--top:6%;--left:-22%;--len:360px;--rot:22deg;--dx:170vw;--dy:78vh;--dur:1.9s;--delay:0.2s"></span>
+    <span class="meteor" style="--top:10%;--left:-35%;--len:280px;--rot:20deg;--dx:165vw;--dy:74vh;--dur:2.1s;--delay:0.9s"></span>
+    <span class="meteor" style="--top:14%;--left:-18%;--len:420px;--rot:23deg;--dx:175vw;--dy:82vh;--dur:1.8s;--delay:1.6s"></span>
+    <span class="meteor" style="--top:18%;--left:-42%;--len:320px;--rot:19deg;--dx:168vw;--dy:76vh;--dur:2.2s;--delay:2.2s"></span>
+    <span class="meteor" style="--top:22%;--left:-28%;--len:380px;--rot:21deg;--dx:172vw;--dy:80vh;--dur:2.0s;--delay:3.0s"></span>
+    <span class="meteor" style="--top:26%;--left:-38%;--len:260px;--rot:18deg;--dx:160vw;--dy:70vh;--dur:2.3s;--delay:3.6s"></span>
+    <span class="meteor" style="--top:30%;--left:-20%;--len:460px;--rot:24deg;--dx:178vw;--dy:86vh;--dur:1.7s;--delay:4.3s"></span>
+    <span class="meteor" style="--top:34%;--left:-45%;--len:340px;--rot:20deg;--dx:170vw;--dy:78vh;--dur:2.1s;--delay:5.0s"></span>
+    <span class="meteor" style="--top:38%;--left:-26%;--len:400px;--rot:22deg;--dx:174vw;--dy:82vh;--dur:1.9s;--delay:5.6s"></span>
+    <span class="meteor" style="--top:42%;--left:-40%;--len:300px;--rot:19deg;--dx:166vw;--dy:74vh;--dur:2.2s;--delay:6.2s"></span>
+    <span class="meteor" style="--top:46%;--left:-18%;--len:440px;--rot:23deg;--dx:176vw;--dy:84vh;--dur:1.8s;--delay:6.9s"></span>
+    <span class="meteor" style="--top:50%;--left:-36%;--len:280px;--rot:18deg;--dx:162vw;--dy:70vh;--dur:2.3s;--delay:7.4s"></span>
+    <span class="meteor" style="--top:12%;--left:-55%;--len:360px;--rot:21deg;--dx:180vw;--dy:88vh;--dur:2.0s;--delay:8.1s"></span>
+    <span class="meteor" style="--top:28%;--left:-60%;--len:320px;--rot:20deg;--dx:178vw;--dy:86vh;--dur:2.2s;--delay:8.7s"></span>
+    <span class="meteor" style="--top:44%;--left:-58%;--len:420px;--rot:23deg;--dx:184vw;--dy:92vh;--dur:1.8s;--delay:9.2s"></span>
+    <span class="meteor" style="--top:60%;--left:-52%;--len:300px;--rot:19deg;--dx:176vw;--dy:84vh;--dur:2.3s;--delay:9.8s"></span>
+  </div>
+
   <div class="grain" aria-hidden="true"></div>
   <div class="vignette" aria-hidden="true"></div>
 
