--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
   <title>AES-256-GCM</title>
   <style>
     :root{
-      --bg0:#05060a;
+      --bg0:#06070a;
       --bg1:#070a12;
-      --bg2:#0a1020;
-      --fg:#f5f7ff;
+      --bg2:#0b1020;
+      --fg:#f2f4ff;
       --line:rgba(255,255,255,.12);
       --panel:rgba(255,255,255,.045);
       --field:rgba(0,0,0,.30);
       --shadow:rgba(0,0,0,.70);
-      --radius2:12px;
+      --r:12px;
     }
 
     *{box-sizing:border-box}
     html,body{height:100%}
+
     body{
       margin:0;
       min-height:100vh;
@@ -29,104 +30,61 @@
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
       overflow:hidden;
       background:
-        radial-gradient(1200px 900px at 15% 15%, rgba(120,160,255,.18), transparent 60%),
-        radial-gradient(900px 700px at 85% 20%, rgba(90,220,255,.12), transparent 55%),
-        radial-gradient(1200px 900px at 70% 85%, rgba(140,120,255,.10), transparent 55%),
+        radial-gradient(1200px 900px at 20% 15%, rgba(120,160,255,.12), transparent 60%),
+        radial-gradient(900px 700px at 85% 18%, rgba(90,220,255,.07), transparent 60%),
+        radial-gradient(900px 800px at 60% 92%, rgba(160,120,255,.05), transparent 65%),
         linear-gradient(180deg, var(--bg0), var(--bg2));
     }
 
     .sky{
       position:fixed; inset:0;
-      z-index:0;
       pointer-events:none;
-      overflow:hidden;
+      z-index:0;
     }
 
-    .stars{
-      position:absolute; inset:-20%;
-      background:
-        radial-gradient(1px 1px at 10% 20%, rgba(255,255,255,.9), transparent 55%),
-        radial-gradient(1px 1px at 22% 78%, rgba(255,255,255,.7), transparent 55%),
-        radial-gradient(1px 1px at 35% 35%, rgba(255,255,255,.8), transparent 55%),
-        radial-gradient(1px 1px at 55% 18%, rgba(255,255,255,.6), transparent 55%),
-        radial-gradient(1px 1px at 62% 62%, rgba(255,255,255,.75), transparent 55%),
-        radial-gradient(1px 1px at 78% 42%, rgba(255,255,255,.65), transparent 55%),
-        radial-gradient(1px 1px at 88% 72%, rgba(255,255,255,.55), transparent 55%),
-        radial-gradient(1px 1px at 18% 55%, rgba(255,255,255,.55), transparent 55%),
-        radial-gradient(1px 1px at 46% 84%, rgba(255,255,255,.55), transparent 55%),
-        radial-gradient(1px 1px at 92% 28%, rgba(255,255,255,.55), transparent 55%);
-      filter: drop-shadow(0 0 10px rgba(180,210,255,.08));
-      opacity:.50;
-      animation: drift 18s linear infinite, twinkle 3.8s ease-in-out infinite;
-      transform:translate3d(0,0,0);
-    }
-
-    .haze{
-      position:absolute; inset:-20%;
-      background:
-        radial-gradient(900px 700px at 18% 70%, rgba(120,160,255,.10), transparent 60%),
-        radial-gradient(800px 600px at 80% 35%, rgba(90,220,255,.08), transparent 55%),
-        radial-gradient(700px 520px at 55% 85%, rgba(160,120,255,.06), transparent 60%);
-      filter: blur(18px);
-      opacity:.70;
-      animation: pulse 7.5s ease-in-out infinite;
-    }
-
-    .snow{
+    .sky::before{
+      content:"";
       position:absolute; inset:0;
-      opacity:.85;
-      filter: drop-shadow(0 0 10px rgba(190,220,255,.10));
-      transform: translateZ(0);
+      opacity:.55;
+      background-image:
+        radial-gradient(1px 1px at 10% 18%, rgba(255,255,255,.85), transparent 60%),
+        radial-gradient(1px 1px at 22% 72%, rgba(255,255,255,.65), transparent 60%),
+        radial-gradient(1px 1px at 36% 40%, rgba(255,255,255,.75), transparent 60%),
+        radial-gradient(1px 1px at 48% 18%, rgba(255,255,255,.55), transparent 60%),
+        radial-gradient(1px 1px at 58% 64%, rgba(255,255,255,.70), transparent 60%),
+        radial-gradient(1px 1px at 72% 44%, rgba(255,255,255,.60), transparent 60%),
+        radial-gradient(1px 1px at 86% 30%, rgba(255,255,255,.55), transparent 60%),
+        radial-gradient(1px 1px at 92% 72%, rgba(255,255,255,.55), transparent 60%),
+        radial-gradient(1px 1px at 18% 52%, rgba(255,255,255,.55), transparent 60%),
+        radial-gradient(1px 1px at 44% 84%, rgba(255,255,255,.55), transparent 60%),
+        radial-gradient(1px 1px at 64% 82%, rgba(255,255,255,.55), transparent 60%),
+        radial-gradient(1px 1px at 78% 18%, rgba(255,255,255,.55), transparent 60%);
+      filter: drop-shadow(0 0 10px rgba(200,220,255,.06));
     }
 
-    .flake{
-      position:absolute;
-      top:-12vh;
-      width: var(--s);
-      height: var(--s);
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.95), rgba(255,255,255,.35) 55%, rgba(255,255,255,0) 72%);
-      opacity: var(--o);
-      animation: snowFall var(--dur) linear var(--delay) infinite;
-      will-change: transform, opacity;
-      transform: translateZ(0);
-      filter: blur(var(--blur));
-    }
-
-    @keyframes snowFall{
-      0%   { transform: translate3d(var(--x), -14vh, 0) scale(var(--k)); opacity: 0; }
-      8%   { opacity: var(--o); }
-      100% { transform: translate3d(calc(var(--x) + var(--dx)), 118vh, 0) scale(var(--k)); opacity: 0; }
-    }
-
-    @keyframes drift{
-      0%{transform: translate3d(0,0,0) scale(1)}
-      100%{transform: translate3d(-3%,2%,0) scale(1.02)}
-    }
-    @keyframes twinkle{
-      0%,100%{opacity:.42}
-      50%{opacity:.62}
-    }
-    @keyframes pulse{
-      0%,100%{opacity:.68; transform:translate3d(0,0,0)}
-      50%{opacity:.84; transform:translate3d(1.2%, -1%, 0)}
+    .sky::after{
+      content:"";
+      position:absolute; inset:0;
+      background:
+        radial-gradient(900px 650px at 20% 70%, rgba(120,160,255,.08), transparent 62%),
+        radial-gradient(800px 600px at 80% 35%, rgba(90,220,255,.06), transparent 62%),
+        radial-gradient(700px 520px at 55% 90%, rgba(160,120,255,.05), transparent 68%);
+      opacity:.55;
     }
 
     .wrap{
       position:relative;
       z-index:2;
       width:min(980px,92vw);
-      padding:26px;
+      padding:22px;
     }
 
     .box{
       width:100%;
       border-radius:18px;
-      background: linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.03));
+      background: linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.028));
       border:1px solid rgba(255,255,255,.12);
-      box-shadow:
-        0 24px 60px rgba(0,0,0,.55),
-        inset 0 1px 0 rgba(255,255,255,.06);
+      box-shadow: 0 24px 60px rgba(0,0,0,.55), inset 0 1px 0 rgba(255,255,255,.06);
       backdrop-filter: blur(10px);
       overflow:hidden;
       position:relative;
@@ -136,20 +94,22 @@
       content:"";
       position:absolute; inset:-2px;
       background:
-        radial-gradient(600px 300px at 10% 10%, rgba(120,160,255,.22), transparent 55%),
-        radial-gradient(520px 320px at 90% 20%, rgba(90,220,255,.18), transparent 55%),
-        radial-gradient(520px 320px at 70% 90%, rgba(160,120,255,.12), transparent 60%);
-      filter: blur(18px);
+        radial-gradient(600px 300px at 10% 10%, rgba(120,160,255,.16), transparent 58%),
+        radial-gradient(520px 320px at 90% 20%, rgba(90,220,255,.12), transparent 60%),
+        radial-gradient(520px 320px at 70% 90%, rgba(160,120,255,.08), transparent 64%);
+      filter: blur(16px);
       opacity:.55;
       pointer-events:none;
-      animation: panelGlow 9s ease-in-out infinite;
-    }
-    @keyframes panelGlow{
-      0%,100%{transform:translate3d(0,0,0); opacity:.50}
-      50%{transform:translate3d(1%, -1%, 0); opacity:.68}
+      transform:translate3d(0,0,0);
+      animation: glow 10s ease-in-out infinite;
     }
 
-    .inner{position:relative; padding:22px;}
+    @keyframes glow{
+      0%,100%{opacity:.45; transform:translate3d(0,0,0)}
+      50%{opacity:.65; transform:translate3d(1%, -1%, 0)}
+    }
+
+    .inner{position:relative; padding:20px;}
 
     .top{
       display:flex;
@@ -159,10 +119,11 @@
       margin-bottom:14px;
       flex-wrap:nowrap;
     }
+
     h1{
       margin:0;
       font-size:16px;
-      letter-spacing:.35px;
+      letter-spacing:.45px;
       opacity:.95;
       flex:1 1 auto;
       min-width:0;
@@ -171,9 +132,11 @@
       text-overflow:ellipsis;
       text-transform:uppercase;
     }
+
     .right{flex:0 0 auto; display:flex; justify-content:flex-end;}
 
     .row{display:flex;gap:12px;flex-wrap:wrap;margin:12px 0}
+
     .two{
       display:grid;
       grid-template-columns:1fr 1fr;
@@ -183,7 +146,7 @@
     .two > button{width:100%}
 
     input,textarea,button{
-      border-radius:var(--radius2);
+      border-radius:var(--r);
       border:1px solid rgba(255,255,255,.14);
       background: rgba(0,0,0,.26);
       color:var(--fg);
@@ -192,29 +155,30 @@
       outline:none;
       transition: transform .14s ease, border-color .18s ease, background .18s ease, box-shadow .18s ease, filter .18s ease;
     }
+
     input,textarea{flex:1;min-width:240px}
     textarea{width:100%;min-height:150px;resize:vertical;line-height:1.35}
-    input::placeholder, textarea::placeholder{color:rgba(245,247,255,.45)}
+    input::placeholder, textarea::placeholder{color:rgba(242,244,255,.42)}
+
     input:focus, textarea:focus{
-      border-color: rgba(120,160,255,.45);
-      box-shadow: 0 0 0 3px rgba(120,160,255,.15);
+      border-color: rgba(150,190,255,.40);
+      box-shadow: 0 0 0 3px rgba(120,160,255,.12);
     }
 
     button{
       cursor:pointer;
       user-select:none;
-      background:
-        linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.20));
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.22));
       border:1px solid rgba(255,255,255,.16);
     }
+
     button:hover{
-      border-color: rgba(150,190,255,.35);
-      box-shadow:
-        0 10px 24px rgba(0,0,0,.35),
-        0 0 0 3px rgba(120,160,255,.10);
-      filter:saturate(1.08);
+      border-color: rgba(170,200,255,.32);
+      box-shadow: 0 10px 22px rgba(0,0,0,.35), 0 0 0 3px rgba(120,160,255,.08);
+      filter:saturate(1.06);
       transform: translateY(-1px);
     }
+
     button:active{
       transform: translateY(1px) scale(.99);
       box-shadow: 0 6px 14px rgba(0,0,0,.32);
@@ -226,8 +190,7 @@
       font-size:12px;
       white-space:nowrap;
       letter-spacing:.2px;
-      background:
-        linear-gradient(90deg, rgba(120,160,255,.16), rgba(90,220,255,.10), rgba(160,120,255,.10));
+      background: linear-gradient(90deg, rgba(120,160,255,.16), rgba(90,220,255,.10), rgba(160,120,255,.08));
       border-color: rgba(160,190,255,.22);
       box-shadow: inset 0 1px 0 rgba(255,255,255,.08);
     }
@@ -259,6 +222,7 @@
       box-shadow:0 12px 26px rgba(0,0,0,.60);
       z-index:10;
     }
+
     .toast.show{
       opacity:1;
       transform:translateX(-50%) translateY(-2px);
@@ -273,11 +237,13 @@
       padding:18px;
     }
     .modal.show{display:flex}
+
     .modal .backdrop{
       position:absolute; inset:0;
       background: rgba(0,0,0,.58);
       backdrop-filter: blur(6px);
     }
+
     .modal .card{
       position:relative;
       width:min(720px, 94vw);
@@ -287,31 +253,36 @@
       box-shadow: 0 30px 80px rgba(0,0,0,.65);
       overflow:hidden;
     }
+
     .modal .card::before{
       content:"";
       position:absolute; inset:-2px;
       background:
-        radial-gradient(520px 260px at 15% 10%, rgba(120,160,255,.22), transparent 60%),
-        radial-gradient(520px 260px at 85% 20%, rgba(90,220,255,.16), transparent 60%),
-        radial-gradient(520px 260px at 60% 95%, rgba(160,120,255,.12), transparent 65%);
-      filter: blur(18px);
-      opacity:.65;
+        radial-gradient(520px 260px at 15% 10%, rgba(120,160,255,.18), transparent 62%),
+        radial-gradient(520px 260px at 85% 20%, rgba(90,220,255,.12), transparent 62%),
+        radial-gradient(520px 260px at 60% 95%, rgba(160,120,255,.08), transparent 66%);
+      filter: blur(16px);
+      opacity:.62;
       pointer-events:none;
-      animation: panelGlow 9s ease-in-out infinite;
+      animation: glow 10s ease-in-out infinite;
     }
+
     .modal .content{position:relative; padding:18px;}
+
     .modal h2{
       margin:0 0 12px;
       font-size:16px;
       letter-spacing:.2px;
       opacity:.92;
     }
+
     .modal textarea{
       min-height:120px;
       width:100%;
       background: rgba(0,0,0,.30);
       border-color: rgba(255,255,255,.14);
     }
+
     .modal .actions{
       display:flex;
       gap:12px;
@@ -319,12 +290,19 @@
       margin-top:14px;
       flex-wrap:wrap;
     }
+
     .modal .actions button{min-width:130px;}
+
     .btn-primary{
-      border-color: rgba(120,160,255,.28);
-      background:
-        linear-gradient(90deg, rgba(120,160,255,.24), rgba(90,220,255,.14), rgba(160,120,255,.14));
+      border-color: rgba(120,160,255,.26);
+      background: linear-gradient(90deg, rgba(120,160,255,.22), rgba(90,220,255,.12), rgba(160,120,255,.10));
       box-shadow: inset 0 1px 0 rgba(255,255,255,.10);
+    }
+
+    @media (prefers-reduced-motion: reduce){
+      .box::before{animation:none}
+      .modal .card::before{animation:none}
+      *{transition:none !important}
     }
 
     @media (max-width: 420px){
@@ -338,11 +316,7 @@
   </style>
 </head>
 <body>
-  <div class="sky" aria-hidden="true">
-    <div class="stars"></div>
-    <div class="haze"></div>
-    <div class="snow" id="snow"></div>
-  </div>
+  <div class="sky" aria-hidden="true"></div>
 
   <div class="wrap">
     <div class="box">
@@ -704,40 +678,6 @@
     $("btnTogglePass").textContent = isPw ? "ẨN" : "HIỆN";
   }
 
-  function spawnSnow(){
-    const host = $("snow");
-    host.innerHTML = "";
-    const isMobile = matchMedia("(max-width: 520px)").matches;
-    const count = isMobile ? 55 : 90;
-
-    for (let i=0;i<count;i++){
-      const f = document.createElement("div");
-      f.className = "flake";
-
-      const x = (Math.random()*110 - 5).toFixed(2) + "vw";
-      const dx = (Math.random()*16 - 8).toFixed(2) + "vw";
-      const s = (1.2 + Math.random()*2.6).toFixed(2) + "px";
-      const k = (0.8 + Math.random()*0.9).toFixed(2);
-      const o = (0.18 + Math.random()*0.55).toFixed(2);
-
-      const delay = (Math.random()*3.0).toFixed(2) + "s";
-      const dur = (7.0 + Math.random()*8.5).toFixed(2) + "s";
-
-      const blur = (Math.random() < 0.65 ? 0 : (Math.random()*0.9).toFixed(2)) + "px";
-
-      f.style.setProperty("--x", x);
-      f.style.setProperty("--dx", dx);
-      f.style.setProperty("--s", s);
-      f.style.setProperty("--k", k);
-      f.style.setProperty("--o", o);
-      f.style.setProperty("--delay", delay);
-      f.style.setProperty("--dur", dur);
-      f.style.setProperty("--blur", blur);
-
-      host.appendChild(f);
-    }
-  }
-
   $("btnEnc").addEventListener("click", encrypt);
   $("btnDec").addEventListener("click", decrypt);
   $("btnCopy").addEventListener("click", copyToken);
@@ -747,12 +687,6 @@
   $("btnSafe").addEventListener("click", () => {
     SAFE_MODE = !SAFE_MODE;
     applySafeMode();
-  });
-
-  spawnSnow();
-  window.addEventListener("resize", () => {
-    clearTimeout(window.__snowT);
-    window.__snowT = setTimeout(spawnSnow, 180);
   });
 
   applySafeMode();
