--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <title>AES-256-GCM</title>
   <style>
     :root{
-      --bg0:#06070a;
-      --bg1:#070a12;
-      --bg2:#0b1020;
-      --fg:#f2f4ff;
-      --line:rgba(255,255,255,.12);
+      --bg0:#030305;
+      --bg1:#06070a;
+      --bg2:#0b0e14;
+      --fg:#f3f4f7;
+      --muted:rgba(243,244,247,.60);
+      --line:rgba(255,255,255,.10);
       --panel:rgba(255,255,255,.045);
-      --field:rgba(0,0,0,.30);
-      --shadow:rgba(0,0,0,.70);
+      --field:rgba(0,0,0,.34);
+      --shadow:rgba(0,0,0,.78);
       --r:12px;
     }
 
@@ -30,9 +31,9 @@
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
       overflow:hidden;
       background:
-        radial-gradient(1200px 900px at 20% 15%, rgba(120,160,255,.12), transparent 60%),
-        radial-gradient(900px 700px at 85% 18%, rgba(90,220,255,.07), transparent 60%),
-        radial-gradient(900px 800px at 60% 92%, rgba(160,120,255,.05), transparent 65%),
+        radial-gradient(1200px 900px at 18% 10%, rgba(120,170,255,.09), transparent 62%),
+        radial-gradient(900px 700px at 86% 18%, rgba(140,120,255,.06), transparent 60%),
+        radial-gradient(900px 700px at 50% 92%, rgba(110,220,255,.05), transparent 64%),
         linear-gradient(180deg, var(--bg0), var(--bg2));
     }
 
@@ -40,51 +41,52 @@
       position:fixed; inset:0;
       pointer-events:none;
       z-index:0;
+      background:
+        radial-gradient(1000px 700px at 25% 20%, rgba(255,255,255,.05), transparent 65%),
+        radial-gradient(900px 680px at 78% 30%, rgba(255,255,255,.03), transparent 65%),
+        radial-gradient(800px 650px at 55% 85%, rgba(255,255,255,.025), transparent 70%);
+      opacity:.9;
     }
 
     .sky::before{
       content:"";
       position:absolute; inset:0;
-      opacity:.55;
+      opacity:.72;
       background-image:
-        radial-gradient(1px 1px at 10% 18%, rgba(255,255,255,.85), transparent 60%),
-        radial-gradient(1px 1px at 22% 72%, rgba(255,255,255,.65), transparent 60%),
-        radial-gradient(1px 1px at 36% 40%, rgba(255,255,255,.75), transparent 60%),
-        radial-gradient(1px 1px at 48% 18%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(1px 1px at 58% 64%, rgba(255,255,255,.70), transparent 60%),
-        radial-gradient(1px 1px at 72% 44%, rgba(255,255,255,.60), transparent 60%),
-        radial-gradient(1px 1px at 86% 30%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(1px 1px at 92% 72%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(1px 1px at 18% 52%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(1px 1px at 44% 84%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(1px 1px at 64% 82%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(1px 1px at 78% 18%, rgba(255,255,255,.55), transparent 60%);
-      filter: drop-shadow(0 0 10px rgba(200,220,255,.06));
-    }
-
-    .sky::after{
-      content:"";
-      position:absolute; inset:0;
-      background:
-        radial-gradient(900px 650px at 20% 70%, rgba(120,160,255,.08), transparent 62%),
-        radial-gradient(800px 600px at 80% 35%, rgba(90,220,255,.06), transparent 62%),
-        radial-gradient(700px 520px at 55% 90%, rgba(160,120,255,.05), transparent 68%);
-      opacity:.55;
+        radial-gradient(1px 1px at 8% 12%, rgba(255,255,255,.95), transparent 60%),
+        radial-gradient(1px 1px at 16% 28%, rgba(255,255,255,.70), transparent 60%),
+        radial-gradient(1px 1px at 22% 76%, rgba(255,255,255,.75), transparent 60%),
+        radial-gradient(1px 1px at 31% 44%, rgba(255,255,255,.65), transparent 60%),
+        radial-gradient(1px 1px at 38% 18%, rgba(255,255,255,.60), transparent 60%),
+        radial-gradient(1px 1px at 44% 62%, rgba(255,255,255,.80), transparent 60%),
+        radial-gradient(1px 1px at 52% 26%, rgba(255,255,255,.70), transparent 60%),
+        radial-gradient(1px 1px at 58% 78%, rgba(255,255,255,.65), transparent 60%),
+        radial-gradient(1px 1px at 64% 48%, rgba(255,255,255,.62), transparent 60%),
+        radial-gradient(1px 1px at 71% 22%, rgba(255,255,255,.60), transparent 60%),
+        radial-gradient(1px 1px at 78% 66%, rgba(255,255,255,.78), transparent 60%),
+        radial-gradient(1px 1px at 86% 38%, rgba(255,255,255,.62), transparent 60%),
+        radial-gradient(1px 1px at 92% 18%, rgba(255,255,255,.58), transparent 60%),
+        radial-gradient(1px 1px at 94% 74%, rgba(255,255,255,.66), transparent 60%),
+        radial-gradient(1px 1px at 12% 56%, rgba(255,255,255,.60), transparent 60%),
+        radial-gradient(1px 1px at 48% 86%, rgba(255,255,255,.58), transparent 60%),
+        radial-gradient(1px 1px at 76% 86%, rgba(255,255,255,.58), transparent 60%),
+        radial-gradient(1px 1px at 60% 12%, rgba(255,255,255,.55), transparent 60%);
+      filter: drop-shadow(0 0 10px rgba(180,200,255,.06));
     }
 
     .wrap{
       position:relative;
       z-index:2;
       width:min(980px,92vw);
-      padding:22px;
+      padding:20px;
     }
 
     .box{
       width:100%;
       border-radius:18px;
-      background: linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.028));
-      border:1px solid rgba(255,255,255,.12);
-      box-shadow: 0 24px 60px rgba(0,0,0,.55), inset 0 1px 0 rgba(255,255,255,.06);
+      background: linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.03));
+      border:1px solid rgba(255,255,255,.10);
+      box-shadow: 0 26px 70px rgba(0,0,0,.62), inset 0 1px 0 rgba(255,255,255,.055);
       backdrop-filter: blur(10px);
       overflow:hidden;
       position:relative;
@@ -94,19 +96,19 @@
       content:"";
       position:absolute; inset:-2px;
       background:
-        radial-gradient(600px 300px at 10% 10%, rgba(120,160,255,.16), transparent 58%),
-        radial-gradient(520px 320px at 90% 20%, rgba(90,220,255,.12), transparent 60%),
-        radial-gradient(520px 320px at 70% 90%, rgba(160,120,255,.08), transparent 64%);
-      filter: blur(16px);
-      opacity:.55;
+        radial-gradient(520px 260px at 12% 12%, rgba(120,170,255,.14), transparent 62%),
+        radial-gradient(520px 260px at 88% 22%, rgba(140,120,255,.10), transparent 62%),
+        radial-gradient(520px 260px at 60% 92%, rgba(110,220,255,.09), transparent 66%);
+      filter: blur(18px);
+      opacity:.38;
       pointer-events:none;
       transform:translate3d(0,0,0);
-      animation: glow 10s ease-in-out infinite;
+      animation: glow 12s ease-in-out infinite;
     }
 
     @keyframes glow{
-      0%,100%{opacity:.45; transform:translate3d(0,0,0)}
-      50%{opacity:.65; transform:translate3d(1%, -1%, 0)}
+      0%,100%{opacity:.30; transform:translate3d(0,0,0)}
+      50%{opacity:.45; transform:translate3d(1%, -1%, 0)}
     }
 
     .inner{position:relative; padding:20px;}
@@ -123,7 +125,7 @@
     h1{
       margin:0;
       font-size:16px;
-      letter-spacing:.45px;
+      letter-spacing:.55px;
       opacity:.95;
       flex:1 1 auto;
       min-width:0;
@@ -147,8 +149,8 @@
 
     input,textarea,button{
       border-radius:var(--r);
-      border:1px solid rgba(255,255,255,.14);
-      background: rgba(0,0,0,.26);
+      border:1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.30);
       color:var(--fg);
       padding:13px 14px;
       font-size:14px;
@@ -158,30 +160,30 @@
 
     input,textarea{flex:1;min-width:240px}
     textarea{width:100%;min-height:150px;resize:vertical;line-height:1.35}
-    input::placeholder, textarea::placeholder{color:rgba(242,244,255,.42)}
+    input::placeholder, textarea::placeholder{color:rgba(243,244,247,.42)}
 
     input:focus, textarea:focus{
-      border-color: rgba(150,190,255,.40);
-      box-shadow: 0 0 0 3px rgba(120,160,255,.12);
+      border-color: rgba(200,210,255,.26);
+      box-shadow: 0 0 0 3px rgba(180,190,255,.09);
     }
 
     button{
       cursor:pointer;
       user-select:none;
-      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.22));
-      border:1px solid rgba(255,255,255,.16);
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.26));
+      border:1px solid rgba(255,255,255,.14);
     }
 
     button:hover{
-      border-color: rgba(170,200,255,.32);
-      box-shadow: 0 10px 22px rgba(0,0,0,.35), 0 0 0 3px rgba(120,160,255,.08);
-      filter:saturate(1.06);
+      border-color: rgba(230,235,255,.22);
+      box-shadow: 0 12px 26px rgba(0,0,0,.40), 0 0 0 3px rgba(200,210,255,.06);
+      filter:saturate(1.03);
       transform: translateY(-1px);
     }
 
     button:active{
       transform: translateY(1px) scale(.99);
-      box-shadow: 0 6px 14px rgba(0,0,0,.32);
+      box-shadow: 0 8px 16px rgba(0,0,0,.34);
     }
 
     .pillbtn{
@@ -190,9 +192,15 @@
       font-size:12px;
       white-space:nowrap;
       letter-spacing:.2px;
-      background: linear-gradient(90deg, rgba(120,160,255,.16), rgba(90,220,255,.10), rgba(160,120,255,.08));
-      border-color: rgba(160,190,255,.22);
+      background: linear-gradient(90deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
+      border-color: rgba(255,255,255,.16);
       box-shadow: inset 0 1px 0 rgba(255,255,255,.08);
+    }
+
+    .btn-primary{
+      border-color: rgba(210,220,255,.18);
+      background: linear-gradient(90deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.10);
     }
 
     .mini{flex:0;min-width:190px}
@@ -211,7 +219,7 @@
       left:50%;
       bottom:28px;
       transform:translateX(-50%);
-      background:rgba(0,0,0,.72);
+      background:rgba(0,0,0,.74);
       border:1px solid rgba(255,255,255,.18);
       padding:10px 14px;
       border-radius:12px;
@@ -219,7 +227,7 @@
       opacity:0;
       pointer-events:none;
       transition:opacity .18s ease, transform .18s ease;
-      box-shadow:0 12px 26px rgba(0,0,0,.60);
+      box-shadow:0 12px 26px rgba(0,0,0,.62);
       z-index:10;
     }
 
@@ -240,7 +248,7 @@
 
     .modal .backdrop{
       position:absolute; inset:0;
-      background: rgba(0,0,0,.58);
+      background: rgba(0,0,0,.62);
       backdrop-filter: blur(6px);
     }
 
@@ -249,8 +257,8 @@
       width:min(720px, 94vw);
       border-radius:18px;
       border:1px solid rgba(255,255,255,.14);
-      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.34));
-      box-shadow: 0 30px 80px rgba(0,0,0,.65);
+      background: linear-gradient(180deg, rgba(255,255,255,.055), rgba(0,0,0,.38));
+      box-shadow: 0 30px 80px rgba(0,0,0,.70);
       overflow:hidden;
     }
 
@@ -258,13 +266,13 @@
       content:"";
       position:absolute; inset:-2px;
       background:
-        radial-gradient(520px 260px at 15% 10%, rgba(120,160,255,.18), transparent 62%),
-        radial-gradient(520px 260px at 85% 20%, rgba(90,220,255,.12), transparent 62%),
-        radial-gradient(520px 260px at 60% 95%, rgba(160,120,255,.08), transparent 66%);
-      filter: blur(16px);
-      opacity:.62;
+        radial-gradient(520px 260px at 15% 10%, rgba(120,170,255,.12), transparent 62%),
+        radial-gradient(520px 260px at 85% 20%, rgba(140,120,255,.08), transparent 62%),
+        radial-gradient(520px 260px at 60% 95%, rgba(110,220,255,.07), transparent 66%);
+      filter: blur(18px);
+      opacity:.30;
       pointer-events:none;
-      animation: glow 10s ease-in-out infinite;
+      animation: glow 12s ease-in-out infinite;
     }
 
     .modal .content{position:relative; padding:18px;}
@@ -279,7 +287,7 @@
     .modal textarea{
       min-height:120px;
       width:100%;
-      background: rgba(0,0,0,.30);
+      background: rgba(0,0,0,.34);
       border-color: rgba(255,255,255,.14);
     }
 
@@ -292,12 +300,6 @@
     }
 
     .modal .actions button{min-width:130px;}
-
-    .btn-primary{
-      border-color: rgba(120,160,255,.26);
-      background: linear-gradient(90deg, rgba(120,160,255,.22), rgba(90,220,255,.12), rgba(160,120,255,.10));
-      box-shadow: inset 0 1px 0 rgba(255,255,255,.10);
-    }
 
     @media (prefers-reduced-motion: reduce){
       .box::before{animation:none}
